# rust_bookstore_api

./: Cargo.toml  README.md  diesel.toml
migrations/2025-01-16-174549_create_books_table/: up.sql
src/: api.rs  database.rs  lib.rs  main.rs  models.rs  repo.rs  schema.rs
tests/: integration_test.rs
