[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.8", features = ["macros"] }
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

