[package]
name = "rust_bookstore_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bb8 = "0.8"
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
diesel_migrations = { version = "2" }
